--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
 	<body>
 		<section class="gameStats" id="gameStats"></section>
 		<main class="main" id="main">
-			<div class="gameboard" id="gameboard"></div>
+			<div class="gameboard" id="gameboard">
+				<div class="gameboardDivs" id="0"></div>
+				<div class="gameboardDivs" id="1"></div>
+				<div class="gameboardDivs" id="2"></div>
+				<div class="gameboardDivs" id="3"></div>
+				<div class="gameboardDivs" id="4"></div>
+				<div class="gameboardDivs" id="5"></div>
+				<div class="gameboardDivs" id="6"></div>
+				<div class="gameboardDivs" id="7"></div>
+				<div class="gameboardDivs" id="8"></div>
+			</div>
 		</main>
 		<section class="gameScore" id="gameScore">
-			<p class="score player1">8</p>
+			<p class="score player1">7</p>
 			<span class="divider"></span>
-			<p class="score player2">9</p>
+			<p class="score player2">6</p>
 		</section>
-		<script href="script.js" defer></script>
+		<script src="script.js" defer></script>
 	</body>
 </html>
