Validating win or tie

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 				<div class="gameboardDivs" id="8"></div>
 			</div>
 		</main>
-		<section class="gameScore" id="gameScore">
+		<!-- <section class="gameScore" id="gameScore">
 			<p class="score player1">7</p>
 			<span class="divider"></span>
 			<p class="score player2">6</p>
-		</section>
+		</section> -->
 		<script src="script.js" defer></script>
 	</body>
 </html>
